--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/asien/Desktop/JADE-all-4.4.0/JADE-bin-4.4.0/jade/lib/jade.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Jade/Jade-core/jade/lib/jade.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
